syntax = "proto3";

package fhirnpmproto;

option go_package = "github.com/openhie/instant/goinstant/fhirnpmproto";

message IndexJson {
    int32 index_version = 1 [json_name="index-version"];

    message Files {
        string filename = 3;
        string resourceType = 4;
        string id = 5;
        string url = 6;
        string version = 7;
        string kind = 8;
        string type = 9;
    }

    repeated Files filesrep = 100 [json_name="files"];

}